TestSuite/errors/err0386.pas
type
  T1 = partial class a: integer; end;
  
  T1 = partial abstract class end;
  
begin
 
end.